Added support for custom gun sounds

--- a/WeaponsManager.asmdef
+++ b/WeaponsManager.asmdef
@@ -16,7 +16,8 @@
         "Assembly-CSharp.dll",
         "PhotonUnityNetworking.dll",
         "InControl.dll",
-        "PhotonRealtime.dll"
+        "PhotonRealtime.dll",
+        "SonigonAudioEngine.Runtime.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": []
