--- a/WeaponsManager.asmdef
+++ b/WeaponsManager.asmdef
@@ -2,7 +2,6 @@
     "name": "WeaponsManager",
     "references": [
         "UnboundLib",
-        "ModdingUtils",
         "Unity.TextMeshPro"
     ],
     "optionalUnityReferences": [],
@@ -13,11 +12,11 @@
     "precompiledReferences": [
         "0Harmony.dll",
         "BepInEx.dll",
-        "Assembly-CSharp.dll",
         "PhotonUnityNetworking.dll",
         "InControl.dll",
+        "SonigonAudioEngine.Runtime.dll",
         "PhotonRealtime.dll",
-        "SonigonAudioEngine.Runtime.dll"
+        "Assembly-CSharp.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": []
